Still trying to deploy on GitHub Pages

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Bigolaro
 email: bigolaro@xavieralexandre.io
 description: "Nouvelles et ressources du projet Bigolaro."
-baseurl: ""
+baseurl: "/bigolaro"
 url: "http://www.bigolaro.ch"
 
 # Build settings
